--- a/src/views/pages/account/payment.ejs
+++ b/src/views/pages/account/payment.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
   <title>2WAYS.com</title>
   <link rel="stylesheet" href="/styles/pages/account/payment.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 </head>
 
 <body>
@@ -75,6 +76,8 @@
   <script src="/scripts/payment-account.js"></script>
   <script src="/scripts/bank-account-popup.js"></script>
   <script src="/scripts/credit-account-popup.js"></script>
+  <script src="/scripts/search-bar.js"></script>
+
 </body>
 
 </html>
