--- a/src/views/partials/header-medium.ejs
+++ b/src/views/partials/header-medium.ejs
@@ -2,7 +2,7 @@
   <div class="container__header">
     <div class="container__header--top">
       <div class="logo-img">
-        <!-- <img src="/imgs/logo-white.png" alt="" /> -->
+        <img src="/imgs/logo.svg" alt="Logo" />
       </div>
       <div class="container__nav--top">
         <a href="#">Trang chủ</a></li>
