--- a/src/views/pages/account/booking-history.ejs
+++ b/src/views/pages/account/booking-history.ejs
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
   <title>2WAYS.com</title>
   <link rel="stylesheet" href="/styles/pages/account/booking-history.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
 </head>
 
 <body>
@@ -63,6 +65,8 @@
 
   <script src="/scripts/booking-history.js" defer></script>
   <script script src="/scripts/review-popup.js"></script>
+  <script src="/scripts/search-bar.js"></script>
+
 </body>
 
 </html>
