update credit account popup color

--- a/src/views/components/bank-account.ejs
+++ b/src/views/components/bank-account.ejs
@@ -27,7 +27,7 @@
 
                         <div class="form--item">
                             <h2>Tên chi nhánh:</h2>
-                            <input class="form-control" type="text" placeholder="Chọn tên chi nhánh"/>
+                            <input class="form-control" type="text" placeholder="Nhập tên chi nhánh"/>
                         </div>
                         <div class="form--item">
                             <h2>Số tài khoản:</h2>
