--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -15,78 +15,78 @@
 <body>
   <%- include('../../partials/header-medium.ejs') %>
 
-  <div class="changepassword--container">
-    <aside class="aside--wrapper">
-      <div class="aside--content">
-        <img src="../img/row-1-column-6.png" alt="" />
-        <div class="aside__content--detail">
-          <p style="font-weight: 500; margin: 12px 0 0 0">Giàu Phan</p>
+  <div class="change-password-container">
+    <aside class="aside-content">
+      <div class="aside-content__profile">
+        <img class="aside-content__img" src="/imgs/milo.jpg" alt="avatar" />
+        <div class="aside-content__detail">
+          <p class="aside-content__detail-bold">Giàu Phan</p>
           <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
         </div>
       </div>
 
       <hr />
 
-      <div class="aside--section">
-        <p class="profileBtn">Thông tin cá nhân</p>
-        <p class="historyBtn">Lịch sử đặt phòng</p>
-        <p class="accountPaymentBtn">Tài khoản thanh toán</p>
-        <p class="changePasswordBtn">Đổi mật khẩu</p>
+      <div class="aside-content__section">
+        <p class="profile-btn">Thông tin cá nhân</p>
+        <p class="history-btn">Lịch sử đặt phòng</p>
+        <p class="account-payment-btn">Tài khoản thanh toán</p>
+        <p class="change-password-btn">Đổi mật khẩu</p>
       </div>
 
       <hr />
 
-      <div class="aside--item logoutBtn">
+      <div class="aside-content__item logout-btn">
         <p>Đăng xuất</p>
       </div>
     </aside>
 
-    <section id="change1" class="form--input">
-      <div class="form--title">
+    <section id="change1" class="form-input">
+      <div class="form-input__title">
         <h1>Đổi mật khẩu</h1>
         <p>Đổi mật khẩu cho tài khoản của bạn</p>
       </div>
       <hr />
 
-      <div class="form--itemchange1">
+      <div class="form-input__title form__item-change1">
         <h1>Mật khẩu</h1>
         <p>Đổi mật khẩu thường xuyên để giữ tài khoản của bạn được bảo mật</p>
-        <button class="form--submit setBtn">Đặt lại</button>
+        <button class="form-submit set-btn">Đặt lại</button>
       </div>
     </section>
 
-    <section id="change2" class="form--inputchange2">
-      <div class="form--title">
+    <section id="change2" class="form ">
+      <div class="form__title">
         <h1>Đổi mật khẩu</h1>
         <p>Đổi mật khẩu cho tài khoản của bạn</p>
       </div>
       <hr />
-      <p class="center">
+      <p class="form__center">
         Đặt mật khẩu có ít nhất là 8 ký tự, trong đó có cả chữ và số.
       </p>
 
-      <div class="form--items">
-        <div class="form--item">
+      <div class="form__items">
+        <div class="form__item">
           <h1>Mật khẩu cũ:</h1>
           <input class="form-control" type="text" placeholder="Nhập mật khẩu cũ" />
         </div>
 
-        <div class="form--item">
+        <div class="form__item">
           <h1>Mật khẩu mới:</h1>
           <input class="form-control form__password" type="text" placeholder="Nhập mật khẩu mới" />
           <div class="error-message" id="error-message"></div>
         </div>
 
-        <div class="form--item">
+        <div class="form__item">
           <h1>Xác nhận mật khẩu:</h1>
           <input class="form-control form__password-confirm" type="text" placeholder="Nhập lại mật khẩu mới" />
           <div class="error-message" id="error-message"></div>
         </div>
       </div>
-      <div class="form--submitbutton">
-        <button class="form--submit1 cancelBtn">Hủy</button>
+      <div class="form__submitbutton">
+        <button class="form__submit1 cancel-btn">Hủy</button>
 
-        <button class="form--submit2 confirm-button">Xác nhận</button>
+        <button class="form__submit2 confirm-button">Xác nhận</button>
       </div>
     </section>
   </div>
