--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -1,14 +1,14 @@
 <header>
-  <div class="container__header">
-    <div class="container__header--top">
-      <div class="logo-img">
+  <div class="header-container">
+    <div class="header-container__top">
+      <div class="header-container__logo-img">
         <img src="/imgs/logo.svg" alt="Logo" />
       </div>
-      <div class="container__nav--top">
+      <div class="header-container__nav-top">
         <a href="#">Trang chủ</a>
         <a href="#">Thông báo</a>
       </div>
-      <div class="top-authenticator">
+      <div class="header-container__top-authenticator">
         <!-- Header with no login -->
 
         <!-- <button type="button" class="button-signin">Đăng nhập</button>
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="header--title">
+    <div class="header-container__title">
       <h1>Cần nơi dừng chân</h1>
       <h1>Đến ngay 2WAYS.com</h1>
       <h3>Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ,...</h3>
