--- a/src/views/partials/header-medium.ejs
+++ b/src/views/partials/header-medium.ejs
@@ -1,15 +1,14 @@
 <header>
-  <div class="container__header">
-    <div class="container__header--top">
-      <div class="logo-img">
+  <div class="header-container">
+    <div class="header-container--top">
+      <div class="header-container__logo-img">
         <img src="/imgs/logo.svg" alt="Logo" />
       </div>
-      <div class="container__nav--top">
+      <div class="header-container__nav--top">
         <a href="#">Trang chủ</a></li>
         <a href="#">Thông báo</a></li>
-        </ul>
       </div>
-      <div class="top-authenticator">
+      <div class="header-container__top-authenticator">
         <!-- Header with no login -->
 
         <button type="button" class="button-signin">Đăng nhập</button>
