--- a/src/views/partials/header-small-title.ejs
+++ b/src/views/partials/header-small-title.ejs
@@ -1,7 +1,7 @@
 <header>
   <div class="header-container">
-    <img src="/imgs/logo.svg" alt="Logo" />
-    <p class="title"><%= title %></p>
-    <a href="#" class="help">Bạn cần sự trợ giúp?</a>
+    <img class="header-container__img" src="/imgs/logo.svg" alt="Logo" />
+    <p class="header-container__title"><%= title %></p>
+    <a href="#" class="header-container__help">Bạn cần sự trợ giúp?</a>
   </div>
 </header>
