--- a/src/public/styles/components/bank-account-popup.css
+++ b/src/public/styles/components/bank-account-popup.css
@@ -44,13 +44,13 @@ h1 {
     position: relative;
 }
 
-.form--items {
+.account__items {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.form--item {
+.account__item {
     display: flex;
     gap: 25px;
     padding: 10px 0;
@@ -61,7 +61,7 @@ h1 {
     color: var(--black);
 }
 
-.form--item h2 {
+.account__item h2 {
     width: 189px;
     font-size: 22px;
     display: flex;
@@ -69,23 +69,23 @@ h1 {
     padding-top: 8px;
 }
 
-.form--item--notice {
+.account__item--notice {
     width: 189px;
     font-size: 22px;
     margin: -10px 0;
 }
 
-.form--item--notice p {
+.account__item--notice p {
     font-size: 14px;
     text-align: right;
 }
 
-.form--item input {
+.account__item input {
     width: 526px;
     height: 48px;
 }
 
-.form--item select {
+.account__item select {
     width: 590px;
     height: 48px;
 }
@@ -108,7 +108,7 @@ h1 {
     margin: 18px 0 0 0;
 }
 
-.account__button--submit1 {
+.form-button--submit1 {
     width: 96px;
     height: 48px;
     border-radius: 8px;
@@ -118,7 +118,7 @@ h1 {
     font-size: 16px;
 }
 
-.account__button--submit2 {
+.form-button--submit2 {
     width: 131px;
     height: 48px;
     border-radius: 8px;
@@ -128,13 +128,13 @@ h1 {
     font-size: 16px;
 }
 
-.account__close--btn {
+.account__btn-close {
     position: absolute;
     top: 16px;
     right: 19px;
 }
 
-.account__close--btn span {
+.account__btn-close span {
     color: var(--primary-color-2);
 }
 
