--- a/src/public/styles/components/otp.css
+++ b/src/public/styles/components/otp.css
@@ -34,7 +34,7 @@ h1 {
   font-size: 16px;
 }
 
-.otp__card--input {
+.otp__card-input {
   margin: 26px 0;
   display: grid;
   gap: 23px;
@@ -42,7 +42,7 @@ h1 {
   grid-template-columns: repeat(6, auto);
 }
 
-.otp__card--input input {
+.otp__card-input input {
   width: 45px;
   height: 60px;
   font-size: 16px;
@@ -78,13 +78,13 @@ h1 {
   font-size: 16px;
 }
 
-.otp__close--btn {
+.otp__close-btn {
   position: absolute;
   top: 16px;
   right: 19px;
 }
 
-.otp__close--btn span {
+.otp__close-btn span {
   color: #00696d;
 }
 
@@ -101,11 +101,15 @@ h1 {
 }
 
 .otp__button--submit1:hover {
-  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
+  box-shadow:
+    0 1px 3px 1px rgba(0, 0, 0, 0.2),
+    0 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .otp__button--submit2:hover {
-  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
+  box-shadow:
+    0 1px 3px 1px rgba(0, 0, 0, 0.2),
+    0 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .otp__button[disabled] {
