--- a/src/public/styles/pages/account/booking-history.css
+++ b/src/public/styles/pages/account/booking-history.css
@@ -18,7 +18,7 @@ body {
     align-items: center;
 }
 
-.bookinghistory--container {
+.booking-history-container {
     margin-top: 12px;
     margin-bottom: 12px;
     /* width: 80%; */
@@ -27,7 +27,7 @@ body {
     gap: 12px;
 }
 
-.aside--wrapper {
+.aside-content {
     display: flex;
     flex-direction: column;
     width: 25%;
@@ -38,54 +38,58 @@ body {
     height: 450px;
 }
 
-.aside--content {
+.aside-content__profile {
     display: flex;
     align-items: center;
     gap: 12px;
 }
+.aside-content__detail-bold {
+    font-weight: 500;
+    margin: 12px 0 0 0;
+}
 
-.aside--section {
+.aside-content__section {
     font-weight: 500;
 }
 
-.aside--section p {
+.aside-content__section p {
     padding: 12px;
     height: 48px;
     margin-bottom: 12px;
 }
 
-.aside--section p:hover {
+.aside-content__section p:hover {
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
 }
 
-.aside--section p:nth-child(2) {
+.aside-content__section p:nth-child(2) {
     background-color: var(--primary-color-1);
     color: var(--white);
     border-radius: 8px;
 }
 
-.aside--wrapper img {
+.aside-content__img {
     height: 64px;
     width: 64px;
     border-radius: 100%;
 }
 
-.aside--item p {
+.aside-content__item p {
     color: var(--red);
     font-weight: 500;
     padding-left: 12px;
 }
 
-.booking--history {
+.booking-history {
     padding: 24px;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
     width: 75%;
 }
 
-.booking--history--items {
+.booking-history__items {
     display: flex;
     flex-direction: column;
     align-items: center;
