--- a/src/public/styles/pages/account/index.css
+++ b/src/public/styles/pages/account/index.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
 }
 
-.accountpage--container {
+.account-container {
     margin-top: 12px;
     margin-bottom: 12px;
     /* width: 80%; */
@@ -31,7 +31,7 @@ hr {
     margin: 14px;
 }
 
-.aside--wrapper {
+.aside-content {
     display: flex;
     flex-direction: column;
     width: 25%;
@@ -42,59 +42,64 @@ hr {
     height: 450px;
 }
 
-.aside--content {
+.aside-content__profile {
     display: flex;
     align-items: center;
     gap: 12px;
 }
 
-.aside--section {
+.aside-content__detail-bold {
+    font-weight: 500;
+    margin: 12px 0 0 0;
+}
+
+.aside-section {
     font-weight: 500;
 }
 
-.aside--section p {
+.aside-section p {
     padding: 12px;
     height: 48px;
     margin-bottom: 12px;
 }
 
-.aside--section p:hover {
+.aside-section p:hover {
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
 }
 
-.aside--section p:first-child {
+.aside-section p:first-child {
     background-color: var(--primary-color-1);
     color: var(--white);
     border-radius: 8px;
     padding: 12px;
 }
 
-.aside--wrapper img {
+.aside-content__img {
     height: 64px;
     width: 64px;
     border-radius: 100%;
 }
 
-.aside--item p {
+.aside-item p {
     color: var(--red);
     font-weight: 500;
     padding-left: 12px;
 }
 
-.form--input {
+.form {
     padding: 24px;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
     width: 75%;
 }
-.form--items {
+.form__items {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.form--item {
+.form__item {
     display: flex;
     gap: 12px;
     padding: 12px;
@@ -105,7 +110,7 @@ hr {
 .form-control:disabled::placeholder {
     color: var(--black);
 }
-.form--item h1 {
+.form__item h1 {
     width: 221px;
     font-size: 22px;
     display: flex;
@@ -124,9 +129,10 @@ hr {
     color: var(--outline-variant);
 }
 
-.form--submitbutton {
+.form__submitbutton {
     display: flex;
     gap: 10px;
+    justify-content: flex-end;
 }
 
 .form--submit1 {
@@ -149,15 +155,10 @@ hr {
     font-size: 16px;
 }
 
-.form--submitbutton {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.profileBtn,
-.historyBtn,
-.accountPaymentBtn,
-.changePasswordBtn,
-.logoutBtn {
+.profile-btn,
+.history-btn,
+.accountPayment-btn,
+.changePassword-btn,
+.logout-btn {
     cursor: pointer;
 }
