--- a/src/public/styles/pages/account/payment.css
+++ b/src/public/styles/pages/account/payment.css
@@ -17,7 +17,7 @@ body {
     align-items: center;
 }
 
-.paymentaccount--container {
+.payment-account-container {
     margin-top: 12px;
     margin-bottom: 12px;
     /* width: 80%; */
@@ -35,7 +35,7 @@ hr {
     opacity: none;
 }
 
-.aside--wrapper {
+.aside-content {
     display: flex;
     flex-direction: column;
     width: 25%;
@@ -46,62 +46,68 @@ hr {
     height: 450px;
 }
 
-.aside--content {
+.aside-content__profile {
     display: flex;
     align-items: center;
     gap: 12px;
 }
 
-.aside--section {
+.aside-content__section {
     font-weight: 500;
 }
 
-.aside--section p {
+.aside-content__section p {
     padding: 12px;
     height: 48px;
     margin-bottom: 12px;
 }
 
-.aside--section p:hover {
+.aside-content__section p:hover {
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
 }
 
-.aside--section p:nth-child(3) {
+.aside-content__section p:nth-child(3) {
     background-color: var(--primary-color-1);
     color: var(--white);
     border-radius: 8px;
     padding: 12px;
 }
 
-.aside--wrapper img {
+.aside-content__img {
     height: 64px;
     width: 64px;
     border-radius: 100%;
 }
 
-.aside--item p {
+.aside-content__detail-bold {
+    font-weight: 500;
+    margin: 12px 0 0 0;
+}
+
+.aside-content__item p {
     color: var(--red);
     font-weight: 500;
     padding-left: 12px;
 }
 
-.form--input {
+.form {
     padding: 24px;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
     width: 75%;
+    align-items: start;
 }
 
-.card--items {
+.form__card-items {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 12px;
 }
 
-.card--item {
+.form__card-item {
     display: flex;
     gap: 30px;
     padding: 12px;
@@ -112,12 +118,12 @@ hr {
     border-radius: 8px;
 }
 
-.card--item h1 {
+.form__card-item h1 {
     font-size: 24px;
     font-weight: 600px;
 }
 
-.card--item h2 {
+.form__card-item h2 {
     font-size: 22px;
     font-weight: 500px;
     color: rgba(0, 0, 0, 0.38);
@@ -144,16 +150,16 @@ hr {
     font-size: 16px;
 }
 
-.debit-credit-card,
-.bank-account {
+.form__debit-credit-card,
+.form__bank-account {
     display: flex;
     justify-content: space-between;
 }
 
-.profileBtn,
-.historyBtn,
-.accountPaymentBtn,
-.changePasswordBtn,
-.logoutBtn {
+.profile-btn,
+.history-btn,
+.accountPayment-btn,
+.changePassword-btn,
+.logout-btn {
     cursor: pointer;
 }
