--- a/src/public/styles/pages/order-payment.css
+++ b/src/public/styles/pages/order-payment.css
@@ -7,7 +7,7 @@ body {
     width: 100vw;
 }
 
-.payment--container {
+.payment-container {
     width: 80%;
     max-width: 1152px;
     display: flex;
@@ -16,7 +16,7 @@ body {
     margin: 12px auto;
 }
 
-.aside--wrapper {
+.aside-wrapper {
     width: 376px;
     height: 706px;
     display: flex;
@@ -39,7 +39,7 @@ h1 {
     font-weight: 500;
 }
 
-.hotel-detail {
+.aside-wrapper__hotel-detail {
     width: 100%;
     height: 128px;
     display: flex;
@@ -51,8 +51,8 @@ h1 {
     border-radius: 8px;
 }
 
-.type-hotel,
-.wifi-free {
+.aside-wrapper__type-hotel,
+.aside-wrapper__wifi-free {
     display: flex;
     gap: 8px;
     align-items: center;
@@ -70,7 +70,7 @@ h1 {
     color: var(--gray);
 }
 
-.your-booking-detail {
+.aside-wrapper__your-booking-detail {
     display: flex;
     flex-direction: column;
     border: 1px solid var(--outline-variant);
@@ -79,7 +79,11 @@ h1 {
     height: 447px;
 }
 
-.check-date,
+.aside-wrapper__your-booking-detail h1 {
+    margin: 12px 12px 0 12px;
+}
+
+.aside-wrapper__check-date,
 .method-choice,
 .list-account-title {
     display: flex;
@@ -87,15 +91,15 @@ h1 {
     padding: 12px;
 }
 
-.checkin-date,
-.checkout-date {
+.aside-wrapper__checkin-date,
+.aside-wrapper__checkout-date {
     display: flex;
     flex-direction: column;
     gap: 4px;
     width: 50%;
 }
 
-.countdown-time {
+.aside-wrapper__countdown-time {
     display: flex;
     gap: 4px;
     color: var(--red);
@@ -103,14 +107,14 @@ h1 {
     padding: 0 12px;
 }
 
-.total-length-stay {
+.aside-wrapper__total-length-stay {
     display: flex;
     gap: 4px;
     flex-direction: column;
     padding: 12px 12px 0 12px;
 }
 
-.cost-total {
+.aside-wrapper__cost-total {
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -120,18 +124,18 @@ h1 {
     padding: 12px;
 }
 
-.cost-total .red-line {
+.aside-wrapper__cost-total .aside-wrapper__red-line {
     color: var(--red);
     text-decoration: line-through;
 }
-.your-choice {
+.aside-wrapper__your-choice {
     display: flex;
     flex-direction: column;
     gap: 4px;
     padding: 0 12px 12px 12px;
 }
 
-.cost {
+.aside-wrapper__cost {
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -143,14 +147,14 @@ hr {
     margin-left: 5px;
 }
 
-.section--content {
+.section-content {
     width: 740px;
     display: flex;
     flex-direction: column;
     gap: 12px;
 }
 
-.confirm-account {
+.section-content__confirm-account {
     display: flex;
     flex-direction: row;
     gap: 12px;
@@ -159,13 +163,13 @@ hr {
     border-radius: 12px;
 }
 
-.confirm-account img {
+.section-content__img {
     width: 64px;
     height: 64px;
     border-radius: 100%;
 }
 
-.account-detail {
+.section-content__account-detail {
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -176,7 +180,7 @@ hr {
     gap: 8px;
 }
 
-.select-methods {
+.section-content__select-methods {
     display: flex;
     flex-direction: column;
     gap: 6px;
@@ -184,11 +188,6 @@ hr {
     border: 1px solid var(--outline-variant);
     border-radius: 12px;
     height: 526px;
-}
-
-.select-methods {
-    display: flex;
-    flex-direction: column;
 }
 
 .account-item {
@@ -245,7 +244,7 @@ hr {
     display: flex;
     flex-direction: column;
 }
-.confirm-detail {
+.section-content__confirm-detail {
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -253,7 +252,7 @@ hr {
     border-radius: 12px;
     padding: 12px;
 }
-.confirm-method {
+.section-content__confirm-method {
     /* display: flex; */
     align-items: center;
 }
@@ -287,7 +286,7 @@ button.submit-booking {
     border-radius: 8px;
 }
 
-.cancel-fee {
+.aside-wrapper__cancel-fee {
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -296,7 +295,7 @@ button.submit-booking {
     border: 1px solid var(--outline-variant);
 }
 
-.cancel-free {
+.aside-wrapper__cancel-free {
     color: var(--green);
     display: flex;
     flex-direction: row;
@@ -346,7 +345,7 @@ button.submit-booking {
     display: block;
 }
 
-.select-method {
+.section-content__select-method {
     display: flex;
     flex-direction: column;
 }
