--- a/src/public/styles/partials/header-small-title.css
+++ b/src/public/styles/partials/header-small-title.css
@@ -15,12 +15,12 @@ header {
     justify-content: space-between;
 }
 
-.logo {
+.header-container__img {
     width: 168px;
     height: 48px;
 }
 
-.title {
+.header-container__title {
     font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
@@ -28,7 +28,7 @@ header {
     margin: 0;
 }
 
-.help {
+.header-container__help {
     font-size: 1.375rem;
     color: var(--white);
 }
