--- a/src/public/styles/partials/header-small.css
+++ b/src/public/styles/partials/header-small.css
@@ -1,90 +1,96 @@
 @import url("/styles/base.css");
 
-/* html {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    color: #ffffff;
-    font-weight: 500;
-} */
-
 header {
-    width: 100vw;
     background-color: var(--primary-color-1);
     height: 112px;
-    top: 0;
-    z-index: 1;
+    display: flex;
+    align-items: center;
 }
 
-.container {
+.header-container {
+    width: 80%;
+    margin: 0 auto;
     display: flex;
-    justify-content: center;
-}
-
-.container__header--top {
-    display: flex;
-    height: 112px;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    align-self: stretch;
 }
 
-.container__header--top img {
-    display: flex;
-    width: 167.652px;
+.header-container__img {
+    width: 168px;
     height: 48px;
 }
 
-.container__nav--top {
+.header-container__nav--top {
     width: 656px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex-direction: row;
-    flex-wrap: nowrap;
+    gap: 48px;
 }
 
-.container__nav--top ul {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.container__nav--top ul li {
-    display: inline;
-    margin: 0 24px;
-    padding-top: 15px;
-}
-
-.container__nav--top ul li a {
-    font-size: 24px;
+.header-container__nav--top a {
+    font-size: 22px;
     text-decoration: none;
-}
-
-.container__nav--top a {
+    font-weight: 500;
     color: var(--white);
 }
 
-.top-authenticator {
-    width: 260px;
+.header-container__top-authenticator {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+/* Header with no login*/
+.header-container__top-authenticator button {
+    width: 128px;
+    height: 48px;
+    background-color: var(--white);
+    color: var(--primary-color-1);
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 8px;
+    border-style: none;
+
+    &:hover {
+        box-shadow:
+            0 1px 3px 1px rgba(0, 0, 0, 0.2),
+            0 0 2px 0 rgba(0, 0, 0, 0.2);
+    }
+}
+
+.header-container__top-authenticator .button-signup {
+    color: var(--white);
+    background-color: var(--primary-color-4);
+    margin: 4px;
+
+    &:hover {
+        box-shadow:
+            0 1px 3px 1px rgba(0, 0, 0, 0.2),
+            0 0 2px 0 rgba(0, 0, 0, 0.2);
+    }
+}
+
+/* Header with login*/
+.header-container__top-authenticator {
+    top: 0;
+    right: 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
-.top-authenticator img {
+.header-container__top-authenticator img {
     width: 64px;
     height: 64px;
     margin: 0 5px;
     border-radius: 100%;
-    background-image: url(/imgs/milo.jpg);
 }
 
-.top-authenticator p {
+.header-container__top-authenticator p {
     margin: 0 5px;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 600;
     line-height: 32px;
-    color: var(--white);
 }
