--- a/src/views/components/bank-account-popup.ejs
+++ b/src/views/components/bank-account-popup.ejs
@@ -1,46 +1,46 @@
 <div class="modal">
-    <div class="account-container">
-        <div class="account">
-            <div class="account__card">
-                <h1>Thêm tài khoản ngân hàng</h1>
-                <div class="form--items">
-                    <div class="form--item">
-                        <h2>Tên ngân hàng:</h2>
-                        <select class="form-select" aria-label="Default select example">
-                            <option selected>Chọn ngân hàng</option>
-                            <option value="1">BIDV</option>
-                            <option value="2">Vietcombank</option>
-                            <option value="3">MB</option>
-                            <option value="4">Agribank</option>
-                            <option value="5">ACB</option>
-                        </select>
-                    </div>
+  <div class="account-container">
+    <section class="account">
+      <div class="account__card">
+        <h1>Thêm tài khoản ngân hàng</h1>
+        <div class="account__items">
+          <div class="account__item" style="margin-left: -60px">
+            <h2>Tên ngân hàng:</h2>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Chọn ngân hàng</option>
+              <option value="1">BIDV</option>
+              <option value="2">Vietcombank</option>
+              <option value="3">MB</option>
+              <option value="4">Agribank</option>
+              <option value="5">ACB</option>
+            </select>
+          </div>
 
-                    <div class="form--item">
-                        <h2>Tên chi nhánh:</h2>
-                        <input class="form-control" type="text" placeholder="Chọn tên chi nhánh" />
-                    </div>
-                    <div class="form--item">
-                        <h2>Số tài khoản:</h2>
-                        <input class="form-control" type="text" placeholder="Nhập số tài khoản" />
-                    </div>
-                    <div class="form--item">
-                        <div class="form--item--notice">
-                            <h2>Tên chủ tài khoản:</h2>
-                            <p>(In hoa, không dấu)</p>
-                        </div>
-                        <input class="form-control" type="text" placeholder="Nhập tên chủ tài khoản" />
-                    </div>
-                </div>
-                <div class="account__button">
-                    <button class="account__button--submit1 closeBtn">Hủy</button>
-
-                    <button class="account__button--submit2">Hoàn thành</button>
-                </div>
-                <div class="account__close--btn">
-                    <span class="material-symbols-outlined closeIcon">cancel</span>
-                </div>
+          <div class="account__item">
+            <h2>Tên chi nhánh:</h2>
+            <input class="form-control" type="text" placeholder="Chọn tên chi nhánh" />
+          </div>
+          <div class="account__item">
+            <h2>Số tài khoản:</h2>
+            <input class="form-control" type="text" placeholder="Nhập số tài khoản" />
+          </div>
+          <div class="account__item">
+            <div class="account__item--notice">
+              <h2>Tên chủ tài khoản:</h2>
+              <p>(In hoa, không dấu)</p>
             </div>
+            <input class="form-control" type="text" placeholder="Nhập tên chủ tài khoản" />
+          </div>
         </div>
-    </div>
+        <div class="account__button">
+          <button class="form-button--submit1 close-btn">Hủy</button>
+
+          <button class="form-button--submit2">Hoàn thành</button>
+        </div>
+        <div class="account__btn-close">
+          <span class="material-symbols-outlined closeIcon">cancel</span>
+        </div>
+      </div>
+    </section>
+  </div>
 </div>
