--- a/src/views/components/otp.ejs
+++ b/src/views/components/otp.ejs
@@ -9,11 +9,11 @@
     </head>
     <body>
         <div class="otp-container">
-            <div class="otp">
+            <section class="otp">
                 <div class="otp__card">
                     <h1>Xác thực OTP</h1>
                     <p class="otp__notice">Mã OTP đã được gửi đến số điện thoại của bạn!</p>
-                    <div class="otp__card--input">
+                    <div class="otp__card-input">
                         <input type="text" class="form-control otp__card-text" maxlength="1">
                         <input type="text" class="form-control otp__card-text" maxlength="1">
                         <input type="text" class="form-control otp__card-text" maxlength="1">
@@ -29,11 +29,11 @@
 
                         <button class="otp__button--submit2">Tiếp tục</button>
                     </div>
-                    <div class="otp__close--btn">
+                    <div class="otp__close-btn">
                         <span class="material-symbols-outlined">cancel</span>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
     </body>
 </html>
