--- a/src/views/pages/account/booking-history.ejs
+++ b/src/views/pages/account/booking-history.ejs
@@ -11,44 +11,44 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
 </head>
-
+content__profile
 <body>
   <%- include('../../partials/header-medium.ejs') %>
 
-  <div class="bookinghistory--container">
-    <aside class="aside--wrapper">
-      <div class="aside--content">
-        <img src="../../img/row-1-column-6.png" alt="" />
-        <div class="aside__content--detail">
-          <p style="font-weight: 500; margin: 12px 0 0 0">Giàu Phan</p>
+  <main class="booking-history-container">
+    <aside class=" aside-content">
+      <div class="aside-content__profile">
+        <img class="aside-content__img" src="/imgs/milo.jpg" alt="avatar" />
+        <div class="aside-content__detail">
+          <p class="aside-content__detail-bold">Giàu Phan</p>
           <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
         </div>
       </div>
 
       <hr />
 
-      <div class="aside--section">
-        <p class="profileBtn">Thông tin cá nhân</p>
-        <p class="historyBtn">Lịch sử đặt phòng</p>
-        <p class="accountPaymentBtn">Tài khoản thanh toán</p>
-        <p class="changePasswordBtn">Đổi mật khẩu</p>
+      <div class="aside-content__section">
+        <p class="profile-btn">Thông tin cá nhân</p>
+        <p class="history-btn">Lịch sử đặt phòng</p>
+        <p class="account-payment-btn">Tài khoản thanh toán</p>
+        <p class="change-password-btn">Đổi mật khẩu</p>
       </div>
 
       <hr />
 
-      <div class="aside--item logoutBtn">
+      <div class="aside-content__item logout-btn">
         <p>Đăng xuất</p>
       </div>
     </aside>
 
-    <section class="booking--history">
-      <div class="booking--history-title">
+    <section class="booking-history">
+      <div class="booking-history__title">
         <h1>Lịch sử đặt phòng</h1>
       </div>
 
-      <div class="filter-bar"></div>
+      <!-- <div class="filter-bar"></div> -->
 
-      <div class="booking--history--items">
+      <div class="booking-history__items">
         <div class=""><%- include('../../components/room-in-hs.ejs') %></div>
 
         <div class=""><%- include('../../components/room-in-hs.ejs') %></div>
@@ -58,7 +58,7 @@
         <div class=" "><%- include('../../components/room-in-hs.ejs') %></div>
       </div>
     </section>
-  </div>
+  </main>
   <%- include('../../components/next-page.ejs') %>
   <%- include('../../components/review-popup.ejs') %>
   <%-include('../../partials/footer.ejs') %>
