--- a/src/views/pages/account/index.ejs
+++ b/src/views/pages/account/index.ejs
@@ -14,100 +14,100 @@
 <body>
   <%- include('../../partials/header-medium') %>
 
-  <div class="accountpage--container">
-    <aside class="aside--wrapper">
-      <div class="aside--content">
-        <img src="../img/row-1-column-6.png" alt="" />
-        <div class="aside__content--detail">
-          <p style="font-weight: 500; margin: 12px 0 0 0">Giàu Phan</p>
+  <div class="account-container">
+    <aside class="aside-content">
+      <div class="aside-content__profile">
+        <img class="aside-content__img" src="/imgs/milo.jpg" alt="" />
+        <div class="aside-content__detail">
+          <p class="aside-content__detail-bold">Giàu Phan</p>
           <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
         </div>
       </div>
 
       <hr />
 
-      <div class="aside--section">
-        <p class="profileBtn">Thông tin cá nhân</p>
-        <p class="historyBtn">Lịch sử đặt phòng</p>
-        <p class="accountPaymentBtn">Tài khoản thanh toán</p>
-        <p class="changePasswordBtn">Đổi mật khẩu</p>
+      <div class="aside-section">
+        <p class="profile-btn">Thông tin cá nhân</p>
+        <p class="history-btn">Lịch sử đặt phòng</p>
+        <p class="account-payment-btn">Tài khoản thanh toán</p>
+        <p class="change-password-btn">Đổi mật khẩu</p>
       </div>
 
       <hr />
 
-      <div class="aside--item logoutBtn">
+      <div class="aside-item logout-btn">
         <p>Đăng xuất</p>
       </div>
     </aside>
     <!-- Xem hồ sơ -->
-    <section id="view-profile" class="form--input">
-      <div class="form--title">
+    <section id="view-profile" class="form">
+      <div class="form__title">
         <h1>Thông tin cá nhân</h1>
         <p>Cập nhật thông tin của bạn</p>
       </div>
 
       <hr />
 
-      <div class="form--items">
-        <div class="form--item">
+      <div class="form__items">
+        <div class="form__item">
           <h1>Họ và tên:</h1>
           <input class="form-control" type="text" placeholder="Phan Nguyễn Yến Giàu" disabled />
         </div>
 
-        <div class="form--item">
+        <div class="form__item">
           <h1>Địa chỉ Email:</h1>
           <input class="form-control" type="text" placeholder="21520796@gm.uit.edu.vn" disabled />
         </div>
 
-        <div class="form--item">
+        <div class="form__item">
           <h1>Ngày sinh:</h1>
           <input class="form-control unfilled" type="none" placeholder="Thêm ngày sinh" disabled />
         </div>
 
-        <div class="form--item">
+        <div class="form__item">
           <h1>Giới tính:</h1>
           <input class="form-control unfilled" type="none" placeholder="Thêm giới tính" disabled />
         </div>
 
-        <!-- <div class="form--item">
+        <!-- <div class="form__item">
             <label for="fname">Name</label>
             <input type="text"
                 placeholder="Phan Nguyen Yen Giau"
                 disabled>
           </div> -->
       </div>
-      <div class="form--submitbutton">
+      <div class="form__submitbutton">
         <!-- <button class="form--submit1">Hủy</button> -->
 
         <button class="form--submit2 form--submit2-default">Sửa</button>
       </div>
     </section>
     <!-- Sửa hồ sơ -->
-    <section id="edit-profile" class="form--input">
-      <div class="form--title">
+    <section id="edit-profile" class="form">
+      <div class="form__title">
         <h1>Thông tin cá nhân</h1>
         <p>Cập nhật thông tin của bạn</p>
       </div>
 
       <hr />
 
-      <div class="form--items">
-        <div class="form--item">
+      <div class="form__items">
+        <div class="form__item">
           <h1>Họ và tên:</h1>
           <input class="form-control" type="text" placeholder="Phan Nguyễn Yến Giàu" />
         </div>
 
-        <div class="form--item">
+        <div class="form__item">
           <h1>Địa chỉ Email:</h1>
           <input class="form-control" type="text" placeholder="21520796@gm.uit.edu.vn" />
         </div>
 
-        <div class="form--item">
+        <div class="form__item">
           <h1>Ngày sinh:</h1>
           <input class="form-control" type="date" placeholder="Thêm ngày sinh" />
         </div>
 
-        <div class="form--item">
+        <div class="form__item">
           <h1>Giới tính:</h1>
           <select class="form-select" aria-label="Default select example">
             <option selected>Thêm giới tính</option>
@@ -117,7 +117,7 @@
           </select>
         </div>
       </div>
-      <div class="form--submitbutton">
+      <div class="form__submitbutton">
         <button class="form--submit1 cancel-btn">Hủy</button>
 
         <button class="form--submit2">Lưu</button>
