--- a/src/views/pages/account/payment.ejs
+++ b/src/views/pages/account/payment.ejs
@@ -14,56 +14,57 @@
 <body>
   <%- include('../../partials/header-medium') %>
 
-  <div class="paymentaccount--container">
-    <aside class="aside--wrapper">
-      <div class="aside--content">
-        <img src="../img/row-1-column-6.png" alt="" />
-        <div class="aside__content--detail">
-          <p style="font-weight: 500; margin: 12px 0 0 0">Giàu Phan</p>
+  <div class="payment-account-container">
+    <aside class="aside-content">
+      <div class="aside-content__profile">
+        <img class="aside-content__img" src="/imgs/milo.jpg" alt="avatar" />
+        <div class="aside-content__detail">
+          <p class="aside-content__detail-bold">Giàu Phan</p>
           <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
         </div>
       </div>
 
       <hr>
 
-      <div class="aside--section">
-        <p class="profileBtn">Thông tin cá nhân</p>
-        <p class="historyBtn">Lịch sử đặt phòng</p>
-        <p class="accountPaymentBtn">Tài khoản thanh toán</p>
-        <p class="changePasswordBtn">Đổi mật khẩu</p>
+      <div class="aside-content__section">
+        <p class="profile-btn">Thông tin cá nhân</p>
+        <p class="history-btn">Lịch sử đặt phòng</p>
+        <p class="account-payment-btn">Tài khoản thanh toán</p>
+        <p class="change-password-btn">Đổi mật khẩu</p>
       </div>
 
       <hr />
 
-      <div class="aside--item logoutBtn">
+      <div class="aside-content__item logout-btn">
         <p>Đăng xuất</p>
       </div>
     </aside>
 
-    <section class="form--input">
-      <div class="form--title">
+    <section class="form">
+      <div class="form__title">
         <h1>Thông tin thanh toán</h1>
         <p>Thêm hoặc bỏ các phương thức thanh toán</p>
       </div>
 
       <hr />
 
-      <div class="card--items">
-        <div class="card--item ">
-          <div class="debit-credit-card">
+      <div class="form__card-items">
+        <div class="form__card-item ">
+          <div class="form__debit-credit-card">
             <h1>Thẻ tín dụng/ghi nợ</h1>
-            <button class="debit-credit-card--submit addCreditAccountBtn">+ Thêm thẻ mới</button>
+            <button class="debit-credit-card--submit add-credit-account-btn">+ Thêm thẻ mới</button>
           </div>
           <h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
         </div>
 
-        <div class="card--item ">
-          <div class="bank-account">
+        <div class="form__card-item ">
+          <div class="form__bank-account">
             <h1>Tài khoản ngân hàng của tôi</h1>
-            <button class="bank-account--submit addBankAccountBtn">+ Thêm tài khoản ngân hàng</button>
+            <button class="bank-account--submit add-bank-account-btn">+ Thêm tài khoản ngân hàng</button>
           </div>
           <h2>Bạn chưa liên kết tài khoản ngân hàng</h2>
         </div>
+      </div>
 
     </section>
   </div>
