--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -1,22 +1,21 @@
 <header>
-  <div class="container">
-    <div class="container__header--top">
-      <div class="logo-img">
-        <img src="/imgs/logo.svg" alt="Logo" />
-      </div>
-      <div class="container__nav--top">
-        <ul>
-          <li><a href="#">Trang chủ</a></li>
-          <li><a href="#">Thông báo</a></li>
-        </ul>
-      </div>
-      <div class="top-authenticator">
-        <p>Chào,</p>
-        <p>Giau Phan</p>
-        <img src="" alt="" />
-        <!-- <img src="/imgs/logo-white.png" alt="" /> -->
-      </div>
+  <div class="header-container">
+    <img class="header-container__img" src="/imgs/logo.svg" alt="Logo" />
+    <div class="header-container__nav--top">
+      <a href="#">Trang chủ</a></li>
+      <a href="#">Thông báo</a></li>
+    </div>
+    <div class="header-container__top-authenticator">
+      <!-- Header with no login -->
+
+      <button type="button" class="button-signin">Đăng nhập</button>
+      <button type="button" class="button-signup">Đăng ký</button>
+
+      <!-- Header with Login-->
+
+      <!-- <p>Chào,</p>
+            <p>Giau Phan</p>
+            <img src="../img/row-1-column-6.png" alt="" /> -->
     </div>
   </div>
 </header>
-<!-- <div style="width: 100%; height: 112px"></div> -->
