--- a/src/views/components/credit-account-popup.ejs
+++ b/src/views/components/credit-account-popup.ejs
@@ -1,7 +1,7 @@
 <div class="modal2" style="display: none;">
     <div class="credit-container">
         <div class="credit">
-            <div class="credit__card">
+            <form class="credit__card" action="payment-addDebitCard" method="POST">
                 <h1>Thêm thẻ tín dụng/ghi nợ</h1>
                 <div class="credit__secure">
                     <div class="icon">
@@ -19,48 +19,52 @@
                 <div class="credit__details">
                     <h2>Chi tiết thẻ</h2>
                     <div class="credit--img">
-                        <a href="#"><img class="credit__logo" src="/src/public/imgs/brands/visa_logo.png" alt="visa" /></a>
-                        <a href="#"><img class="credit__logo" src="/src/public/imgs/brands/credit-card_logo.png" alt="credit-card" /></a>
-                        <a href="#"><img class="credit__logo" src="/src/public/imgs/brands/jcb_logo.png" alt="jcb" /></a>
+                        <a href="#"><img class="credit__logo" src="/src/public/imgs/brands/visa_logo.png"
+                                alt="visa" /></a>
+                        <a href="#"><img class="credit__logo" src="/src/public/imgs/brands/credit-card_logo.png"
+                                alt="credit-card" /></a>
+                        <a href="#"><img class="credit__logo" src="/src/public/imgs/brands/jcb_logo.png"
+                                alt="jcb" /></a>
                     </div>
                 </div>
 
                 <div class="form--items">
                     <div class="form--item">
                         <h3>Số thẻ:</h3>
-                        <input class="form-control" type="text" placeholder="Nhập số thẻ" />
+                        <input name="debit_num" class="form-control" type="text" placeholder="Nhập số thẻ" />
                     </div>
                     <div class="form--item-2">
                         <h3 class="input-1">Ngày hết hạn:</h3>
-                        <input class="form-control" type="date" placeholder="mm/yyyy" />
+                        <input name="debit_end_date" class="form-control" type="date" placeholder="mm/yyyy" />
                         <h3 class="input-2">Mã CCV:</h3>
-                        <input class="form-control" type="text" placeholder="Nhập mã CCV" />
+                        <input name="debit_CCV" class="form-control" type="text" placeholder="Nhập mã CCV" />
                     </div>
                     <div class="form--item">
                         <h3>Họ và tên chủ thẻ:</h3>
-                        <input class="form-control" type="text" placeholder="Nhập họ và tên chủ thẻ" />
+                        <input name="debit_name" class="form-control" type="text"
+                            placeholder="Nhập họ và tên chủ thẻ" />
                     </div>
                 </div>
                 <h2>Địa chỉ đăng ký thẻ tín dụng/ghi nợ</h2>
                 <div class="form--items">
                     <div class="form--item">
                         <h3>Địa chỉ:</h3>
-                        <input class="form-control" type="text" placeholder="Nhập địa chỉ" />
+                        <input name="debit_address" class="form-control" type="text" placeholder="Nhập địa chỉ" />
                     </div>
                     <div class="form--item">
                         <h3>Mã bưu chính:</h3>
-                        <input class="form-control" type="text" placeholder="Nhập mã bưu chính" />
+                        <input name="debit_postal" class="form-control" type="text" placeholder="Nhập mã bưu chính" />
                     </div>
                 </div>
                 <div class="credit__button">
                     <button class="credit__button--submit1 closeBtn2">Hủy</button>
 
-                    <button class="credit__button--submit2">Hoàn thành</button>
+                    <button name="debit-button" class="credit__button--submit2" type="submit">Hoàn thành</button>
                 </div>
                 <div class="credit__close--btn">
                     <span class="material-symbols-outlined closeIcon2">cancel</span>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
