--- a/src/views/components/room.ejs
+++ b/src/views/components/room.ejs
@@ -9,8 +9,8 @@
                     <p>50 m<sup>2</sup></p>
                 </div>
                 <div class="room__feature">
-                    <button type="button" class="btn">Máy lạnh</button>
-                    <button type="button" class="btn">Bồn tắm</button>
+                    <p>Máy lạnh</p>
+                    <p>Bồn tắm</p>
                 </div>
             </div>
 
@@ -18,9 +18,9 @@
                 <div class="room__title">
                     <h2>Phòng Deluxe giường đôi nhìn ra biển</h2>
                     <div>
-                        <span id="room__minus" class="material-symbols-outlined">remove</span>
-                        <input type="number" value="0" id="room__quantity" class="form-control">
-                        <span id="room__plus" class="material-symbols-outlined">add</span>
+                        <span onclick="minus(event)" class="material-symbols-outlined">remove</span>
+                        <input type="number" value="0" class="form-control">
+                        <span onclick="plus(event)" class="material-symbols-outlined">add</span>
                     </div>
                 </div>
                 <div class="room__content">
