--- a/src/public/styles/components/room.css
+++ b/src/public/styles/components/room.css
@@ -6,7 +6,7 @@
     width: 100%;
     display: inherit;
     flex-direction: column;
-    border: 1px solid #BEC8C9;
+    border: 1px solid var(--outline-variant);
     border-radius: 8px;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .room span {
-    color: var(--primary-color);
+    color: var(--primary-color-1);
 }
 
 .room__type {
@@ -41,6 +41,7 @@
     gap: 12px;
     border-bottom-left-radius: 8px;
     padding-bottom: 12px;
+    background-color: var(--white);
 }
 
 .room__preview {
@@ -59,11 +60,12 @@
     justify-content: space-around;
 }
 
-.room__feature button {
+.room__feature p {
     height: 32px;
     box-sizing: border-box;
     padding: 2px 16px 8px;
-    background-color: rgba(187, 233, 255, 0.5);
+    background-color: var(--primary-color-3-o10);
+    border-radius: 4px;
 }
 
 .room__detail--right {
@@ -71,7 +73,7 @@
     display: inherit;
     flex-direction: column;
     gap: 8px;
-    background-color: rgba(187, 233, 255, 0.5);
+    background-color: var(--primary-color-3-o10);
     box-sizing: border-box;
     padding: 12px 24px 0 24px;
 }
@@ -93,7 +95,8 @@
 }
 
 .room__title input {
-    width: 50px;
+    text-align: center;
+    width: 36px;
     padding: 0 6px;
 }
 
@@ -137,7 +140,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .room__origin-price {
-    color: rgba(0, 0, 0, 0.5);
+    color: var(--black-o50);
 }
 
 .room__price {
@@ -147,7 +150,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .room__unit {
-    color: rgba(0, 0, 0, 0.5);
+    color: var(--black-o50);
     font-weight: 500;
 }
 
@@ -155,7 +158,7 @@ input[type="number"]::-webkit-inner-spin-button {
     height: 48px;
     box-sizing: border-box;
     padding: 8px;
-    background-color: #00A1A6;
+    background-color: var(--primary-color-3);
     border: 0;
     border-radius: 8px;
     font-weight: 500;
@@ -179,7 +182,7 @@ input[type="number"]::-webkit-inner-spin-button {
     display: inherit;
     flex-direction: column;
     gap: 36px;
-    background-color: #4D5F7C;
+    background-color: var(--purple);
     color: var(--white);
     padding: 24px;
     border-top-left-radius: 8px;
@@ -206,7 +209,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .modal__view--big span {
     font-size: 2rem;
-    background-color: rgba(134, 172, 173, 0.70);
+    background-color: var(--blue-gray);
     border-radius: 6px;
 }
 
@@ -254,7 +257,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .detail__item span {
-    color: var(--primary-color);
+    color: var(--primary-color-1);
 }
 
 .detail__feature {
