--- a/src/public/styles/pages/search/detail.css
+++ b/src/public/styles/pages/search/detail.css
@@ -4,16 +4,11 @@
 @import url("/styles/components/comment.css");
 @import url("/styles/partials/footer.css");
 
-html {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    color: #ffffff;
-}
-
 body {
     width: 100vw;
     display: flex;
     flex-direction: column;
+    background-color: var(--white);
 }
 
 .content-container {
@@ -35,7 +30,7 @@ body {
     font-size: 2rem;
     font-weight: 700;
     margin: 0;
-    color: black;
+    color: var(--black);
 }
 
 .title__frame {
@@ -50,7 +45,7 @@ body {
 }
 
 .info__slogan {
-    color: rgba(0, 0, 0, 0.6);
+    color: var(--black-o60);
     font-size: 1rem;
     font-weight: 600;
 }
@@ -61,11 +56,11 @@ body {
     gap: 8px;
 }
 
-.info__category button {
+.info__acco-type {
     height: 32px;
     box-sizing: border-box;
-    padding: 2px 8px 4px;
-    background-color: var(--primary-color);
+    padding: 4px 8px;
+    background-color: var(--primary-color-1);
     color: var(--white);
     font-size: 0.875rem;
     font-weight: 600;
@@ -78,11 +73,13 @@ body {
 }
 
 .info__rank span {
-    color: #fe9c0b;
+    color: var(--primary-color-4);
+    font-variation-settings: 'FILL' 1;
 }
 
 .info__location span {
-    color: var(--primary-color);
+    color: var(--primary-color-1);
+    font-variation-settings: 'FILL' 0;
 }
 
 .info__location p {
@@ -96,10 +93,15 @@ body {
     height: 48px;
     box-sizing: border-box;
     padding: 10px 16px;
-    background-color: #fe9c0b;
+    background-color: var(--primary-color-4);
     color: var(--white);
     border-radius: 8px;
     font-weight: 500;
+}
+
+.title__btn a:hover {
+    color: var(--white);
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .preview {
@@ -151,7 +153,7 @@ body {
     box-sizing: border-box;
     padding: 12px;
     border-radius: 8px;
-    background-color: rgba(187, 233, 255, 0.5);
+    background-color: var(--primary-color-3-o10);
 }
 
 .short-info__intro {
@@ -175,7 +177,8 @@ body {
 }
 
 .feature__item span {
-    color: var(--primary-color);
+    color: var(--primary-color-1);
+    font-variation-settings: 'FILL' 1;
 }
 
 .room-list {
@@ -189,7 +192,7 @@ body {
     gap: 12px;
     padding: 12px;
     border-radius: 8px;
-    background-color: rgba(217, 217, 217, 0.3);
+    background-color: var(--gray-o30);
 }
 
 .room-list__local-price {
@@ -200,7 +203,7 @@ body {
 }
 
 .room-list__local-price span {
-    color: #fe9c0b;
+    color: var(--primary-color-4);
 }
 
 .room-list__submit {
@@ -213,8 +216,12 @@ body {
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--white);
-    background-color: #fe9c0b;
+    background-color: var(--primary-color-4);
     border-radius: 8px;
+}
+
+.room-list__submit-button:hover {
+    color: var(--white);
 }
 
 .general-info {
@@ -223,9 +230,9 @@ body {
 }
 
 .general-info--left {
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 8px;
-    width: 24%;
+    width: 25%;
 }
 
 .general-info h2,
@@ -238,7 +245,7 @@ body {
     font-size: 1.5rem;
     font-weight: 500;
     text-align: center;
-    background-color: var(--primary-color);
+    background-color: var(--primary-color-1);
     color: var(--white);
     padding: 12px 0;
     border-top-left-radius: 8px;
@@ -258,7 +265,7 @@ body {
     display: inherit;
     flex-direction: column;
     gap: 12px;
-    background-color: rgba(187, 233, 255, 0.5);
+    background-color: var(--primary-color-3-o10);
     padding: 12px;
     border-radius: 8px;
 }
@@ -295,7 +302,7 @@ body {
 }
 
 .general-info__item:nth-child(odd) {
-    background-color: rgba(217, 217, 217, 0.50);
+    background-color: var(--gray-o30);
     border-radius: 8px;
 }
 
