--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/styles/pages/search/detail.css" />
     <title>2WAYS.com</title>
@@ -20,7 +20,7 @@
                 <div class="title__info info">
                     <div class="info__slogan">Tận hưởng thả ga, không lo về giá</div>
                     <div class="info__category">
-                        <button type="button" class="btn">Khách sạn</button>
+                        <div class="info__acco-type">Khách sạn</div>
                         <div class="info__rank">
                             <span class="material-symbols-outlined">grade</span>
                             <span class="material-symbols-outlined">grade</span>
@@ -31,9 +31,7 @@
                     </div>
                     <div class="info__location">
                         <span class="material-symbols-outlined">location_on</span>
-                        <p>
-                            23 Trần phú, phường 3, thành phố Vũng tàu, Bà rịa - Vũng Tàu
-                        </p>
+                        <p>23 Trần phú, phường 3, thành phố Vũng tàu, Bà rịa - Vũng Tàu</p>
                     </div>
                 </div>
                 <div class="title__btn">
@@ -139,12 +137,8 @@
                 </div>
             </div>
         </section>
-        <%- include('../../components/comment') %>
-        <%- include('../../components/comment') %>
-        <%- include('../../components/comment') %>
-
-
     </main>
+
     <%- include('../../partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
