Fix css in /pages/booking/detail

--- a/src/public/styles/pages/booking/detail.css
+++ b/src/public/styles/pages/booking/detail.css
@@ -1,10 +1,6 @@
 @import url("/styles/base.css");
-
-html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    color: #000000;
-}
+@import url("/styles/partials/header-small.css");
+@import url("/styles/partials/footer.css");
 
 body {
     width: 100vw;
@@ -61,7 +57,7 @@ a {
 .title__rating {
     display: flex;
     align-items: center;
-    color: #fe9c0b;
+    color: var(--primary-color-4);
     font-variation-settings: 'FILL' 1;
 }
 
@@ -120,9 +116,13 @@ a {
     border-radius: 8px;
     display: inherit;
     gap: 12px;
-    background-color: #fe9c0b;
+    background-color: var(--primary-color-4);
     font-size: 0.875rem;
     color: var(--white)
+}
+
+.detail__btn:hover {
+    color: var(--white);
 }
 
 .detail__contact button {
@@ -155,7 +155,7 @@ a {
 .price__strong {
     font-size: 1.75rem;
     font-weight: 700;
-    color: #fe9c0b;
+    color: var(--primary-color-4);
 }
 
 .abort {
@@ -186,7 +186,7 @@ a {
 
 .abort__highlight {
     font-weight: 700;
-    color: #00696D;
+    color: var(--primary-color-2);
 }
 
 .abort__progress {
