--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -12,6 +12,8 @@
 
 <body>
 
+    <%- include('../../partials/header-small') %>
+
     <main class="content-container">
         <section class="title">
             <h1>Đặt phòng đã được xác nhận của bạn tại 2way.com</h1>
@@ -116,6 +118,8 @@
             <button type="button" class="btn detail__btn">Hủy đặt phòng</button>
         </section>
     </main>
+
+    <%- include('../../partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
