Add modal and fix css in /pages/success

--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -18,6 +18,7 @@
   --link: #0d6efd;
   --blue-gray: #86ACAD;
   --bg-mint-green: rgba(89, 189, 192, 0.2);
+  --error: #BA1A1A;
   --red: #ff0000;
   --bg-white: #f1f1f1;
   --gray: #d9d9d9;
