--- a/src/views/components/room.ejs
+++ b/src/views/components/room.ejs
@@ -61,7 +61,7 @@
                         <p class="room__origin-price"><del>VND 2.500.000</del></p>
                         <p class="room__price">VND 500.000</p>
                         <p class="room__unit">/phòng/đêm</p>
-                        <button type="button" class="bt" data-bs-toggle="modal" data-bs-target="#room-detail">Xem chi tiết phòng</button>
+                        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#room-detail">Xem chi tiết phòng</button>
                     </div>
                 </div>
             </div>
