--- a/src/public/styles/components/room.css
+++ b/src/public/styles/components/room.css
@@ -165,6 +165,10 @@ input[type="number"]::-webkit-inner-spin-button {
     color: var(--white);
 }
 
+.room__content--right button:hover {
+    color: var(--white);
+}
+
 .modal-content {
     flex-direction: row;
     border-radius: 8px;
