--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/styles/pages/booking/success.css" />
     <title>2WAYS.com</title>
 </head>
 
 <body>
+
+    <%- include('../../partials/header-small') %>
 
     <main class="content-container">
         <section class="main-content">
@@ -38,11 +40,11 @@
             </div>
 
             <div class="order-save">
-                <button type="button" class="btn order-btn">
+                <button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#modal">
                     <span class="material-symbols-outlined">print</span>
                     <p>In xác nhận đầy đủ</p>
                 </button>
-                <button type="button" class="btn order-btn">
+                <button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#modal">
                     <span class="material-symbols-outlined">download</span>
                     <p>Lưu xác nhận vào điện thoại</p>
                 </button>
@@ -99,10 +101,22 @@
                         <p>Giờ đây bạn có thể chỉnh sửa hoặc hủy đặt phòng cho đến khi nhận phòng. </p>
                     </div>
                 </div>
-                <button type="button" class="btn order-btn">Tải ứng dụng</button>
+                <button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#modal">Tải ứng dụng</button>
             </div>
         </section>
     </main>
+
+    <div class="modal fade" id="modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg ">
+            <div class="modal-content">
+                <div><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                <span class="material-symbols-outlined">cancel</span>
+                <p>Thực hiện thất bại, vui lòng thử lại sau!</p>
+            </div>
+        </div>
+    </div>
+
+    <%- include('../../partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
